Fix footer overlap on mobile (fix #148)

--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -4,11 +4,6 @@ html {
     font-size: 14px;
 }
 
-body {
-    /* Margin bottom by footer height */
-    margin-bottom: 49px;
-}
-
 div.brand > p {
     color: lightgrey;
     margin-bottom: 0;
@@ -27,12 +22,22 @@ div.brand > h1 {
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
     /* height: 60px; */
     /* line-height: 60px; */
     background-color: #f5f5f5;
+}
+
+@media (min-width: 576px) {
+    .footer {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 49px;
+    }
+    body {
+        /* Margin bottom by footer height */
+        margin-bottom: 49px;
+    }
 }
 
 .editbtn {
